--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -16,4 +16,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use shell form to allow variable expansion for PORT
+CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
