--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -27,4 +27,4 @@ RUN pip install --upgrade pip \
 COPY . .
 
 # Use shell form to allow variable expansion for PORT
-CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
+CMD sh -c "gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:${PORT:-8000}"
