--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,13 +1,16 @@
-fastapi
-uvicorn
-sqlalchemy
-asyncpg
 alembic
+asyncpg
+celery[redis]
+email-validator
+fastapi
+httpx
+passlib[argon2]
+pika
 pydantic[email]
 pydantic-settings
 python-jose[cryptography]
-passlib[argon2]
 python-multipart
 redis
-httpx
-email-validator
+sqlalchemy
+uvicorn[standard]
+gunicorn
