--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -3,37 +3,55 @@ events {
 }
 
 http {
-    upstream app_server {
+    upstream core_services {
         server app:8000;
     }
 
     server {
         listen 80;
 
+        # API Gateway Routing
+        
+        # Core Microservices (Auth, Users, Devices)
         location /api/ {
-            proxy_pass http://app_server/api/;
+            proxy_pass http://core_services/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Docs / OpenAPI
         location /docs {
-            proxy_pass http://app_server/docs;
+            proxy_pass http://core_services/docs;
             proxy_set_header Host $host;
         }
 
         location /openapi.json {
-            proxy_pass http://app_server/openapi.json;
+            proxy_pass http://core_services/openapi.json;
             proxy_set_header Host $host;
         }
         
-        # WebSocket Support
+        # Realtime Service (WebSockets)
         location /api/v1/ws/ {
-            proxy_pass http://app_server/api/v1/ws/;
+            proxy_pass http://core_services/api/v1/ws/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        
+        # Storage Service (Local)
+        location /storage/ {
+            alias /var/www/storage/;
+            autoindex on;
+        }
+
+        # Frontend Cloud Dashboard
+        location /cloud/ {
+            alias /var/www/cloud/;
+            index index.html;
+            try_files $uri $uri/ =404;
         }
     }
 }
