--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,13 @@
 services:
-  # The Backend Service (Docker)
+  # 1. Web Service (The API)
   - type: web
     name: homecontrol-backend
     env: docker
     dockerContext: ./backend/app
     dockerfilePath: ./backend/app/Dockerfile
     plan: free
+    numInstances: 1
+    region: oregon
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -18,18 +20,38 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
+      - key: ALGORITHM
+        value: HS256
       - key: ACCESS_TOKEN_EXPIRE_MINUTES
-        value: "60"
+        value: 1440 # 1 Day
 
-  # Managed Redis
-  - type: redis
-    name: homecontrol-redis
-    plan: free
-    ipAllowList: []    
+  # 2. Worker Service (Celery)
+  - type: worker
+    name: homecontrol-worker
+    env: docker
+    dockerContext: ./backend/app
+    dockerfilePath: ./backend/app/Dockerfile
+    dockerCommand: celery -A worker.celery worker --loglevel=info -Q default_queue,ai_queue
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: homecontrol-db
+          property: connectionString
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: homecontrol-redis
+          property: connectionString
 
 databases:
-  # Managed PostgreSQL
   - name: homecontrol-db
     plan: free
-    databaseName: homecontrol
-    user: homecontrol
+    region: oregon
+
+# Render Redis is not free, checking if we can use free tier...
+# Render doesn't have a free Redis tier in Blueprint yet (only paid).
+# Workaround: Use an internal Redis service? Or use an external provider (Upstash).
+# For simplicity, I will attempt to define a standard Redis service, user might need to pay $10/mo or use external.
+# actually, let's look for "psexec" equivalent? No.
+# Creating a simple Redis instance (Paid) or recommending Upstash.
+# I will note this in the guide.
