--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
-  # Render Deployment Configuration
-  # 1. Web Service (The API)
+  # Render Deployment Configuration (100% Free Tier)
+  # Web Service (The API)
   - type: web
     name: homecontrol-backend
     env: docker
@@ -14,8 +14,6 @@ services:
         fromDatabase:
           name: homecontrol-db
           property: connectionString
-      - key: REDIS_URL
-        sync: false # Set manually in Render Dashboard → use free Upstash Redis URL
       - key: SECRET_KEY
         generateValue: true
       - key: ALGORITHM
@@ -23,22 +21,8 @@ services:
       - key: ACCESS_TOKEN_EXPIRE_MINUTES
         value: 1440 # 1 Day
 
-  # 2. Worker Service (Celery)
-  - type: worker
-    name: homecontrol-worker
-    env: docker
-    dockerContext: ./backend/app
-    dockerfilePath: ./backend/app/Dockerfile
-    dockerCommand: celery -A worker.celery worker --loglevel=info -Q default_queue,ai_queue
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: homecontrol-db
-          property: connectionString
-      - key: REDIS_URL
-        sync: false # Set manually in Render Dashboard → use free Upstash Redis URL
-
 databases:
   - name: homecontrol-db
     plan: free
     region: oregon
+
