Add Render static site for frontend hosting - no Firebase needed

--- a/render.yaml
+++ b/render.yaml
@@ -26,3 +26,13 @@ databases:
     plan: free
     region: oregon
 
+staticSites:
+  - type: static
+    name: homecontrol-cloud
+    buildCommand: echo "No build needed"
+    staticPublishPath: ./cloud
+    pullRequestPreviewsEnabled: false
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
