--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
     plan: free
     numInstances: 1
     region: oregon
+    autoDeploy: true
+    healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
         fromDatabase:
