--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -12,33 +12,26 @@ http {
 
         # API Gateway Routing
         
-        # Core Microservices (Auth, Users, Devices)
-        location /api/ {
-            proxy_pass http://core_services/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # Docs / OpenAPI
-        location /docs {
-            proxy_pass http://core_services/docs;
-            proxy_set_header Host $host;
-        }
-
-        location /openapi.json {
-            proxy_pass http://core_services/openapi.json;
-            proxy_set_header Host $host;
-        }
-        
-        # Realtime Service (WebSockets)
+        # Realtime Service (WebSockets) — MUST be before /api/ block
         location /api/v1/ws/ {
             proxy_pass http://core_services/api/v1/ws/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
             proxy_redirect off;
+        }
+
+        # Core Microservices (Auth, Users, Devices)
+        location /api/ {
+            proxy_pass http://core_services/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
         
         # Storage Service (Local)
